@@ -37,6 +37,8 @@ scheduled-update-checker: true
 scheduled-update-checker-interval: 45
 #Number of votes that a players has to be jailed after reaching it
 votes-to-jail-player: 4
+#Show timer GUI to prisoners?
+show-prisoner-timer: true
 
 ### Config version ###
 #Do not modify this, otherwise plugin may not work properly
